--- a/Front-end/form/form.html
+++ b/Front-end/form/form.html
@@ -353,7 +353,7 @@
                 Status: status,
                 Imagem: image
             };
-            if(password == ""){
+            if(password != ""){
                 let a = { Senha: password };
                 //junta obj a com obj dataApi
                 Object.assign(dataApi, a);
