--- a/Front-end/login/login.html
+++ b/Front-end/login/login.html
@@ -1,9 +1,3 @@
-<!-- QUESTÕES A RESPEITO DO PROJETO -->
-<!-- 1- BOTÃO DE LOGIN DO FACEBOOK E GOOGLE PODERIAM TER SIDO PEGOS PRONTOS? TEM FUNCIONALIDADES QUE ENVOLVEM OS PRÓPRIOS SITES -->
-<!-- 2- O SITE NÃO FAZ O RESIZING TÃO CERTINHO -->
-<!-- SING UP NOW LINK DEVE LEVAR PRA PRÓXIMA PÁGINA!! -->
-
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -14,6 +8,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Ubuntu:wght@300;500;700&display=swap" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link rel="stylesheet" href="login.css">
 
     </head>
@@ -72,74 +67,65 @@
                     </p>
                 </div>
             </div>
-
         </div>
-
-        <script>
-            // pega o id do botão de login
-            var loginB = document.getElementById("loginButton");
-           //pega id do botão eye
-           var buttonEye = document.getElementById("buttonEye"); 
-
-            // Função do botão de login -> verificar validade da entrada
-            var onLoginClick = function(){
-                var email = document.getElementById("emailInput").value;
-                var senha = document.getElementById("passwordInput").value;
-                var msg = document.getElementById("acessDenied");
-
-                var flag = false;
-                const userList = JSON.parse(localStorage.getItem('userList'));
-
-                if(email == "admin" && senha == "admin"){
-                    flag = true;
-                }
-
-                //se apagar a lista, então ele faz o login pra gerar a lista, porem define como falsa a autenticação
-                if(userList == null){
-                    // localStorage.setItem("autentication", false);
-                    // window.location.href = '/dashboard/dashboard.html';
-                    msg.textContent = "Usuário ou senha incorretos";
-                    
-                }
-                else{
-                    for(var i = 0; i < userList.length; i++){
-                        //se achar um usuário e senha que batem, então quebra e valida
-                        if(userList[i].name == email && userList[i].password == senha){
-                            flag = true;
-                            break;
-                        }
-                    }         
-                }
-
-                 if (flag) {
-                    msg.textContent = "";
-                    if (document.getElementById("rememberSession").checked) {
-                        localStorage.setItem("autentication", true);
-                    } else {
-                        sessionStorage.setItem("autentication", true);
-                    }
-
-                    window.location.href = '/dashboard/dashboard.html';
-                }
-                else {
-                    msg.textContent = "Usuário ou senha incorretos";
-                }      
-            }
-
-            // Faz o botão funcionar login funcionar
-            loginB.addEventListener("click", onLoginClick);
-            //faz o botão de toggle visibility funcionar
-            buttonEye.addEventListener("click", function(){
-                var passwordInput = document.getElementById("passwordInput");
-                if(passwordInput.type == "password"){
-                    passwordInput.type = "text";
-                }
-                else{
-                    passwordInput.type = "password";
-                }
-            });
-
-        </script>
     </body>
-
 </html>
+
+<script>
+    // pega o id do botão de login
+    var loginB = document.getElementById("loginButton");
+    //pega id do botão eye
+    var buttonEye = document.getElementById("buttonEye"); 
+
+    // Função do botão de login -> verificar validade da entrada
+    var onLoginClick = function(){
+        var nomeInput = document.getElementById("emailInput").value;
+        var senhaInput = document.getElementById("passwordInput").value;
+        var msg = document.getElementById("acessDenied");
+
+        //login de admin - fase de testes
+        if(nomeInput == "admin" && senhaInput == "admin"){
+            sessionStorage.setItem("autentication", true);
+            window.location.href = '/dashboard/dashboard.html';
+        }
+
+        $.ajax({
+            url: "https://localhost:5001/api/pessoas/",
+            method: "GET",
+            dataType: "json",
+            contentType: "application/json",
+            success: function (data) {
+                data.forEach(p => {
+                    if(p.nome == nomeInput && p.senha == senhaInput){
+                        msg.textContent = "";
+                        if (document.getElementById("rememberSession").checked) {
+                            localStorage.setItem("autentication", true);
+                        } else {
+                            sessionStorage.setItem("autentication", true);
+                        }
+                        window.location.href = '/dashboard/dashboard.html';
+                    }
+                });
+            },
+            error: function (err) {
+                alert("Não foi possível restaurar lista de usuários " + err);
+            }
+        });
+            
+        msg.textContent = "Usuário ou senha incorretos";
+    }
+
+    // Faz o botão funcionar login funcionar
+    loginB.addEventListener("click", onLoginClick);
+    //faz o botão de toggle visibility funcionar
+    buttonEye.addEventListener("click", function(){
+        var passwordInput = document.getElementById("passwordInput");
+        if(passwordInput.type == "password"){
+            passwordInput.type = "text";
+        }
+        else{
+            passwordInput.type = "password";
+        }
+    });
+
+</script>
