--- a/Front-end/form/form.html
+++ b/Front-end/form/form.html
@@ -279,7 +279,7 @@
            <footer>
                 <div>
                     <button type="button" id="saveChanges" 
-                    style="background-color: #e84c3d;color:white"
+                    style="background-color: #22bee6;color:white"
                     onclick="saveChanges()">
                         Save Changes
                     </button>
