export to excel funcionando com csv

--- a/Front-end/dashboard/dashboard.html
+++ b/Front-end/dashboard/dashboard.html
@@ -126,7 +126,7 @@
                 data.forEach(p => {
                     stringPessoas+= `${p.nome};${p.dataCriada};${p.ocupacao};${p.status}\n`
                 });
-                download("pessoas.txt", stringPessoas);
+                download("pessoas.csv", stringPessoas);
             },
             error: function (err) {
                 console.log('error ' + err);
