export to excel funcionando com csv e com ,

--- a/Front-end/dashboard/dashboard.html
+++ b/Front-end/dashboard/dashboard.html
@@ -124,7 +124,7 @@
             contentType: "application/json",
             success: function (data) {
                 data.forEach(p => {
-                    stringPessoas+= `${p.nome};${p.dataCriada};${p.ocupacao};${p.status}\n`
+                    stringPessoas+= `${p.nome},${p.dataCriada},${p.ocupacao},${p.status}\n`
                 });
                 download("pessoas.csv", stringPessoas);
             },
