--- a/Front-end/dashboard/dashboard.html
+++ b/Front-end/dashboard/dashboard.html
@@ -39,10 +39,22 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Name</th>
-                        <th scope="col">Date Created</th>
-                        <th scope="col">Role</th>
+                        <th scope="col">
+                            <i class="fa fa-sort" aria-hidden="true" style="color:#22bee6" onclick=sortByButton("id")></i>
+                            #
+                        </th>
+                        <th scope="col">
+                            <i class="fa fa-sort" aria-hidden="true" style="color:#22bee6" onclick=sortByButton("nome")></i>
+                            Name
+                        </th>
+                        <th scope="col">
+                            <i class="fa fa-sort" aria-hidden="true" style="color:#22bee6" onclick=sortByButton("dataCriada")></i>
+                            Date Created
+                        </th>
+                        <th scope="col">
+                            <i class="fa fa-sort" aria-hidden="true" style="color:#22bee6" onclick=sortByButton("ocupacao")></i>
+                            Role
+                        </th>
                         <th scope="col">Status</th>
                         <th scope="col">Action</th>
                     </tr>
