resolvendo bugs que a paginação causou

--- a/Front-end/dashboard/dashboard.html
+++ b/Front-end/dashboard/dashboard.html
@@ -139,7 +139,7 @@
             dataType: "json",
             contentType: "application/json",
             success: function (data) {
-                data.forEach(p => {
+                data.resultado.forEach(p => {
                     stringPessoas+= `${p.nome},${p.dataCriada},${p.ocupacao},${p.status}\n`
                 });
                 download("pessoas.csv", stringPessoas);
