--- a/Front-end/login/login.html
+++ b/Front-end/login/login.html
@@ -95,7 +95,8 @@
             dataType: "json",
             contentType: "application/json",
             success: function (data) {
-                data.forEach(p => {
+                console.log(data);
+                data.resultado.forEach(p => {
                     if(p.nome == nomeInput && p.senha == senhaInput){
                         msg.textContent = "";
                         if (document.getElementById("rememberSession").checked) {
